import sys
import json
from PyQt5.QtWidgets import QMainWindow, QFileDialog, QTableWidgetItem, QMessageBox, QApplication
from Ui_wanlihong4 import Ui_MainWindow  # 假设 UI 文件生成的 Python 类为 ui_mainwindow.py
from datetime import datetime

class FileInformationViewer(QMainWindow, Ui_MainWindow):
    def __init__(self):
        super().__init__()
        self.setupUi(self)

        # 信号与槽
        self.button_load_file.clicked.connect(self.load_file)
        self.button_delete_file.clicked.connect(self.delete_file)
        self.button_reload_file.clicked.connect(self.reload_file)
        self.file_table.itemSelectionChanged.connect(self.update_preview)

    def load_file(self):
        # 实现加载文件逻辑
        pass

    def delete_file(self):
        # 实现删除文件逻辑
        pass

    def reload_file(self):
        # 实现重新加载文件逻辑
        pass

    def update_preview(self):
        # 根据选中文件更新预览区域
        pass



if __name__ == "__main__":
    app = QApplication(sys.argv)
    window = FileInformationViewer()
    window.show()
    sys.exit(app.exec_())